tests/should_fail/const_a.c
int main() {
	const int a = 0;
	a = 3;
}
